  - Adjust the caret color to some light color.


Data copied from tables are now added to paste history.
  Note: Paste history can be accessed through ctrl+shift+v or ctrl+shift+insert.

Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checked blue) drivers are now displayed on top of the drop-down.
  Thanks to Peter G. Horvath for the patch.


Bug fixes:

Difference chart plotted differences between second next neighbours instead of next neighbours. (See SQL result --> tab Overview --> button Charts --> tab Differences)

Plain zip releases were missing the doc/ folder.

Merge-Request #44: Workaround for DB2/AIX64 driver Metadata: COLUMN_SIZE is only half of CHAR_OCTET_LENGTH in double-bytes datatype GRAPHIC/VARGRAPHIC columns
  Thanks to Stefan Mueller for the merge request.

Merge-Request #44: Bug fix for DB2 when reading database client properties,
  because java.sql.DataBaseMetaData.getClientInfoProperties().getMetadata() returns null.
  Thanks to Stefan Mueller for the merge request.
  Furthermore reading DataBaseMetaData.getClientInfoProperties() was made more fail save.

#1393 Modifying records in a database via the GUI not working correctly with NULL

In the context of bug #1389: When reading data type OTHER ResultSet.wasNull() may be called when no data was read before.
   This resulted in display of "<Error>" in SQL results.

#1392 Code completion on a field shows a wrong sorted list -->
  The behavior is now configurable, see menu File --> New Session properties --> Tab Code completion --> Check box at bottom.
  By default the list is sorted in alphabetical order.

Session menu: Replaced menu name "NewSQLWorksheetActionDummyName" by "New SQL worksheet / New SQL tab"

Error in SQL Parametrisation Plugin:
  SQLs with comments like
  "SELECT * FROM myTable where /*com1*/ id = :myId /*com2*/ ORDER BY id"
  ran into errors.
  Thanks to Stefan Mueller for the merge request.
